--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -27,7 +27,7 @@
     /**
      * default scope for all components in workspace.
      **/
-    "defaultScope": "company.scope"
+    "defaultScope": "enlear.bit-modal-demo"
   },
   /**
    * main configuration for component dependency resolution.
